--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,44 @@ body{
 	background-color: #25715A;
 	font-family: "Times New Roman";
 }
+.prayer{
+	background-color: #D6D6D6;
+	font-family: "Times New Roman";
+	width: 30%
+}
+.border{
+	background-color: #046B92;
+	border: solid;
+	width: 12% ;
+	}
+		
+		.bordera{
+	background-color: #046B92;
+	border: solid;
+	width: 75% ;
+	
+	}
+	.border1{
+	background-color: #046B92;
+	border: solid;
+	width: 75% ;
+	
+	}
+		.border2{
+	background-color: #046B92;
+	border: solid;
+	width: 75% ;
+	
+	}
+		.border3{
+	background-color: #046B92;
+	border: solid;
+	width: 75% ;
+	
+	}
+			.border4{
+	background-color: #046B92;
+	border: solid;
+	width: 75% ;
+	
+	}
