--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,45 @@ body{
 	background-color: #25715A;
 	font-family: "Times New Roman";
 }
+.linksprayer{
+		float: right;
+		width: 20%;
+		border: solid;
+	background-color: #26AADD;
+	}
 .prayer{
-	background-color: #D6D6D6;
+	
 	font-family: "Times New Roman";
-	width: 30%
+	width: 30%;
+	border: solid;
+	background-color: #046B92;
+
 }
+.borderprayer{
+	background-color: #046B92;
+	border: solid;
+	width: 12% ;
+	border: solid;
+}
+.tightaf{
+	background-color: #046B92;
+	border: solid;
+	width: 25% ;
+	border: solid;
+	clear: both;
+}
+
+	.links{
+		float: right;
+		width: 20%;
+		border: solid;
+	background-color: #26AADD;
+	}
 .border{
 	background-color: #046B92;
 	border: solid;
 	width: 12% ;
+	
 	}
 		
 		.bordera{
@@ -27,7 +57,8 @@ body{
 	.border1{
 	background-color: #046B92;
 	border: solid;
-	width: 75% ;
+	width: 25% ;
+	clear: both;
 	
 	}
 		.border2{
@@ -47,4 +78,13 @@ body{
 	border: solid;
 	width: 75% ;
 	
+	}
+		.border5{
+	background-color: #046B92;
+	border: solid;
+	width: 75%;
+	}	
+	.border6{
+		background-color:#046B92;
+		border: solid
 	}
