--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ padding: 25px;
 	font-family: "Times New Roman";
 	width: 65%;
 	border: solid;
+	padding:25px;
 	background-color: #046B92;
 
 }
