3 changes it was acutally like 600

--- a/css/style.css
+++ b/css/style.css
@@ -4,42 +4,42 @@ h1,h2,h3,h4{
 
 body{
 	
-	background-color: #25715A;
+	background-color: #046B92;
 	font-family: "Times New Roman";
 }
 .earlylife{
 	width:65%;
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 
 }
 .earlylife2{
 	width:80%;
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 
 }
 .thestory{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 50%;
 }
 .thesales{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 12% ;
 
 	
 }
 .godd{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 65% ;
 	padding:50px;
 	font-family: "Times New Roman";
 }
 .thesales2{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 65% ;
 	font-family: "Times New Roman";
@@ -48,13 +48,13 @@ body{
 	
 }
 .mainforbidden{
-	background-color: #046B92;
+	background-color: #138A00;
 	width:65%;
 	border: solid;
 	font-family: "Times New Roman";
 	padding:5px;
 }
-.almirCrime{background-color: #046B92;
+.almirCrime{background-color: #138A00;
 	border: solid;
 	width: 65% ;
 padding: 25px;
@@ -63,36 +63,36 @@ padding: 25px;
 .titlegodd{
 	width:25%;
 	border: solid;
-	background-color: #046B92;
+	background-color: #138A00;
 }
 .gaben{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
-	width: 12% ;
+	width: 20% ;
 
 	
 }
 		.gaben2{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 75% ;
 	padding:15px ;
 	
 	}
  .almir1{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 35% ;
 
 	
 }
 .almir2{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width:25%;
 }
 .almir3{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width:65%;
 	
@@ -116,11 +116,12 @@ padding: 25px;
 	font-family: "Times New Roman";
 	width: 30%;
 	border: solid;
-	background-color: #046B92;
+	background-color: #138A00;
+	padding: 7px;
 
 }
 	.info2{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 70% ;
 	padding: 50px;
@@ -132,24 +133,24 @@ padding: 25px;
 	width: 65%;
 	border: solid;
 	padding:25px;
-	background-color: #046B92;
+	background-color: #138A00;
 
 }
 .borderprayer{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 12% ;
 	
 }
 .tightaf{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 25% ;
 	border: solid;
 	clear: both;
 }
 	.info{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 75% ;
 	
@@ -174,20 +175,20 @@ padding: 25px;
 	background-color: #26AADD;
 	}
 .bordermain{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 12% ;
 	
 	}
 		
 		.borderamain{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 75% ;
 	
 	}
 	.namemain{
-		background-color: #046B92;
+		background-color: #138A00;
 	border: solid;
 	width: 26%;
 	clear: both;
@@ -195,36 +196,36 @@ padding: 25px;
 		
 	}
 	.border1main{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 25% ;
 	clear: both;
 	
 	}
 		.border2main{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 75% ;
 	
 	}
 		.border3main{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 75% ;
 	
 	}
 			.border4main{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 75% ;
 	
 	}
 		.border5main{
-	background-color: #046B92;
+	background-color: #138A00;
 	border: solid;
 	width: 75%;
 	}	
 	.border6{
-		background-color:#046B92;
+		background-color:#138A00;
 		border: solid
 	}
