--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@ body{
 	border: solid;
 	width: 50%;
 }
+.vidya{
+	background-color: #138A00;
+	border: solid;
+	width: 50%;
+}
 .thesales{
 	background-color: #138A00;
 	border: solid;
