--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,12 @@ padding: 25px;
 	width: 12% ;
 	
 }
+.borderbust{
+	background-color: #138A00;
+	border: solid;
+	width: 35% ;
+	
+}
 .tightaf{
 	background-color: #138A00;
 	border: solid;
