--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,12 @@ body{
 	border: solid;
 
 }
+.ryan{
+	width:65%;
+	background-color: #138A00;
+	border: solid;
+
+}
 .earlylife2{
 	width:80%;
 	background-color: #138A00;
